# Readable-Conditional-Denoising-Diffusion

./: .gitignore  README.MD  README.md  diffusion.py  environment_small.yml
config/CUT/: CUT.conf
config/Diffusion/: AFHQ.conf  Img2Img.conf  MNIST.conf
config/Diffusion/brain/: gbm_240.conf  gbm_240_T1_T1GD.conf  gbm_240_T2_T1GD.conf
config/Diffusion/spine/: t1_to_t2_water.conf  t2_to_t1.conf
config/paper/T1/: CUT_resnet.conf  CUT_sa-unet.conf  Pix2Pix_sa-unet.conf  Pix2Pix_unet.conf
config/paper/T2/: CUT_resnet.conf  CUT_sa-unet.conf  diffusion.conf
config/paper/ablation/: diffusion_.conf  diffusion_image.conf
dataloader/: aligned_dataset.py  dataloader_mri2ct.py  dataloader_nii.py
datasets/: download_paired.sh
diffusion3d/: .gitignore  README.MD  dataloader_3D.py  environment_small.yml  infer_nako.py  pyproject.toml  train3D.py  train_brocken.py  tutorial_T2w_sag_spine_MR2CT.ipynb  tutorial_image2image_3D.ipynb
diffusion3d/configs/: diffusion3D.conf
diffusion3d/logs_diffusion3D/Diffusion_3D_T2w_CT_spine_sag/version_0/: T2_to_CT_iso_diffusion_img.yaml
diffusion3d/losses/: __init__.py  likelihood_based.py
diffusion3d/models/: diffusion_unet.py  diffusion_unet3D.py  discriminator3D.py
diffusion3d/pl_models/diffusion/: diffusion.py  diffusion_utils.py  load_model_diffusion.py
diffusion3d/utils/: Wrapper_datasets.py  arguments.py  auto_arguments.py  data_augmentation_3D.py  make_snap.py  nii.py  nii_math.py  perlin.py  preprocessing.py
img2img2D/: CUT.py  LICENSE  README.md
img2img2D/config/CUT/: CUT_edges2handbags.conf
img2img2D/config/Diffusion/: AFHQ_big.conf
img2img2D/config/Diffusion/brain/: gbm_200.conf
img2img2D/config/Diffusion/spine/: t1_to_t2.conf
img2img2D/dataloader/: Wrapper_datasets.py  dataloader_ae.py  dataloader_basic.py  dataloader_nii_seg.py
img2img2D/datasets/: download_unpaired.sh
img2img2D/datasets/cityscapes/: mean_and_std_a2b.json
img2img2D/datasets/edges2handbags/: mean_and_std_a2b.json
img2img2D/datasets/maps/: mean_and_std_a2b.json
img2img2D/images/: night2day.xcf
img2img2D/loader/: load_dataset.py  load_model_diffusion.py
img2img2D/models/: patchnce.py
img2img2D/scripts/: Centroids_rename_nii.py  reload_any.py
img2img2D/scripts/datagen/: T1_T2_aligned.py  T1_T2_aligned_inv.py  T1_T2_aligned_inv2.py  T1_T2_aligned_run.py  dataset_gen_bailiang.py  dataset_gen_fx_T1w.py  dataset_gen_gbm.py  dataset_gen_spinegan_T2w_no_reg.py  dataset_gen_spinegan_T2w_one_point_reg.py  dataset_generation3D.py
img2img2D/scripts/figure/: make_figure_framework.py
img2img2D/scripts/registation/: MRT2Centroids_FXCLASS.py
img2img2D/scripts/segmentation/: NAKO2Seg.py  NAKO2Seg_run_all.py  NAKO2Seg_vote.py
img2img2D/scripts/statistics/: find_best_w.py  paired_t_test_dice.py  paired_t_test_qa.py  test_image_quality_all.py  test_image_quality_fid.py
img2img2D/utils/: data_augmentation_3D.py  diffusion_network_based_guidance.py  losses.py  nii_utils.py
loader/: arguments.py  load_model_cut.py
models/: PatchSampleF.py  cut_model.py  cut_stylegan.py  cut_unet.py  diffusion_unet3D.py
scripts/datagen/: dataset_gen_spinegan_T2w.py  dataset_gen_spinegan_T2w_two_point_reg.py  dataset_generation.py
scripts/registation/: MRT2Centroids_FXCLASS_reg.py  MRT2Centroids_NRad.py
scripts/segmentation/: SegTestCases.py  cmp_seg-chll_to_ours.py  seg_functions.py  seg_functions_bids.py
scripts/statistics/: count_gender.py  find_best_w_plot.py  test_image_quality.py
utils/: perlin.py  utils_cut.py  utils_diffusion.py
(+20 files in other folders)
